fixed link text visibility

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -109,6 +109,7 @@ main {
     overflow: hidden;
     filter: brightness(50%);
     border-radius: 3px;
+    display: flex;
 }
 
 .Horiseon-div:hover {
@@ -118,13 +119,21 @@ main {
 
 
 .horiseon {
+    display: flex;
     grid-column: 1;
     width: 100%;
-    z-index: 1;
-} 
+    /* z-index: 1; */
+    background-image: url("../images/01-html-css-git-homework-demo.png");
+    background-size: 150%;
+    align-items: flex-end;
+}    
 
-.horiseon img {
-    width: 100%;
+.project-title {
+    display: flex;
+}
+
+.project-title h3 {
+    /* display: flex; */
 }
 
 
@@ -139,6 +148,7 @@ main {
 }
   
 .small-project {
+    display: flex;
     width: 100%;
     height: 200px;
     overflow: hidden;
@@ -154,6 +164,10 @@ main {
   object-fit: cover;
   width: 100%;
   max-height: 100%;
+}
+
+.small-project1 {
+    background-image: url("../images/1mohammad-alizade-XgeZu2jBaVI-unsplash.jpg");
 }
 
 #Contact{
